--- a/IcedMango.DifyAi/IcedMango.DifyAi.csproj
+++ b/IcedMango.DifyAi/IcedMango.DifyAi.csproj
@@ -5,7 +5,7 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageId>IcedMango.DifyAi</PackageId>
         <PackageReadmeFile>README.Nuget.md</PackageReadmeFile>
-        <Version>1.1.11</Version>
+        <Version>1.1.12</Version>
         <Authors>IcedMango;JobLee</Authors>
         <RepositoryUrl>https://github.com/IcedMango/DifyAi-csharp-sdk</RepositoryUrl>
         <PackageProjectUrl>https://github.com/IcedMango/DifyAi-csharp-sdk</PackageProjectUrl>
@@ -41,10 +41,10 @@
     <ItemGroup Condition="'$(TargetFramework)' == 'net470' or '$(TargetFramework)' == 'netstandard2.0'">
         <PackageReference Include="Mapster" Version="7.3.0" />
         <PackageReference Include="Mapster.Core" Version="1.2.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0-rc.2.24473.5" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0-rc.2.24473.5" />
-        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.0-rc.2.24473.5" />
-        <PackageReference Include="System.Text.Json" Version="9.0.0-rc.2.24473.5" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.4" />
+        <PackageReference Include="System.Text.Json" Version="9.0.4" />
         <PackageReference Include="System.Net.Http" Version="4.3.4" />
     </ItemGroup>
 
@@ -53,8 +53,8 @@
         <PackageReference Include="Mapster.Core" Version="1.2.1" Condition="'$(TargetFramework)' != 'net470' and '$(TargetFramework)' != 'netstandard2.0'" />
         <PackageReference Include="MimeMapping" Version="3.0.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="System.ClientModel" Version="1.2.1" />
-        <PackageReference Include="System.Net.ServerSentEvents" Version="9.0.0-rc.2.24473.5" />
+        <PackageReference Include="System.ClientModel" Version="1.4.1" />
+        <PackageReference Include="System.Net.ServerSentEvents" Version="9.0.4" />
     </ItemGroup>
 
 
