--- a/IcedMango.DifyAi/IcedMango.DifyAi.csproj
+++ b/IcedMango.DifyAi/IcedMango.DifyAi.csproj
@@ -5,7 +5,7 @@
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageId>IcedMango.DifyAi</PackageId>
         <PackageReadmeFile>README.Nuget.md</PackageReadmeFile>
-        <Version>1.1.12</Version>
+        <Version>1.1.13</Version>
         <Authors>IcedMango;JobLee</Authors>
         <RepositoryUrl>https://github.com/IcedMango/DifyAi-csharp-sdk</RepositoryUrl>
         <PackageProjectUrl>https://github.com/IcedMango/DifyAi-csharp-sdk</PackageProjectUrl>
@@ -14,17 +14,17 @@
         <Description>A simple C# SDK for Dify. Support chat api and Knowledge api.</Description>
         <RepositoryType>Github</RepositoryType>
         <LangVersion>12</LangVersion>
-        <TargetFrameworks>net8.0;net6.0;net470;netstandard2.0</TargetFrameworks>
+        <TargetFrameworks>net8.0;netstandard2.0;net470</TargetFrameworks>
         <Title>IcedMango.DifyAi</Title>
         <AssemblyName>IcedMango.DifyAi</AssemblyName>
         <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
     </PropertyGroup>
 
-    <ItemGroup Condition="'$(TargetFramework)' == 'net6.0' ">
+    <!--<ItemGroup Condition="'$(TargetFramework)' == 'net6.0' ">
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
-    </ItemGroup>
+    </ItemGroup>-->
 
     <!--<ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0"/>
@@ -32,19 +32,17 @@
         <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0"/>
     </ItemGroup>-->
 
-    <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+    <!--<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
-    </ItemGroup>
+    </ItemGroup>-->
 
     <ItemGroup Condition="'$(TargetFramework)' == 'net470' or '$(TargetFramework)' == 'netstandard2.0'">
         <PackageReference Include="Mapster" Version="7.3.0" />
         <PackageReference Include="Mapster.Core" Version="1.2.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
-        <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.4" />
-        <PackageReference Include="System.Text.Json" Version="9.0.4" />
+
+        <PackageReference Include="System.Text.Json" Version="10.0.1" />
         <PackageReference Include="System.Net.Http" Version="4.3.4" />
     </ItemGroup>
 
@@ -53,8 +51,11 @@
         <PackageReference Include="Mapster.Core" Version="1.2.1" Condition="'$(TargetFramework)' != 'net470' and '$(TargetFramework)' != 'netstandard2.0'" />
         <PackageReference Include="MimeMapping" Version="3.0.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="System.ClientModel" Version="1.4.1" />
-        <PackageReference Include="System.Net.ServerSentEvents" Version="9.0.4" />
+        <PackageReference Include="System.ClientModel" Version="1.8.1" />
+        <PackageReference Include="System.Net.ServerSentEvents" Version="10.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.1" />
     </ItemGroup>
 
 
